# illustar-ics

./: README.md  main.py  pyproject.toml  report.md  save.py
.github/workflows/: ics.yaml  static.yml
output/: illustar.ics
